--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <head>
         <title>calculator</title>
         <script src="math operatrion.js"></script>
+        <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/564x/6e/a5/72/6ea57255eee59ddbb93e59f55a002df2.jpg">
     </head>
 </html>
